# cpp_exam_Marks_Cimermanis

./: CMakeLists.txt  Theory.txt  main.cpp
include/: Triangle.h
src/: Triangle.cpp
test/: CMakeLists.txt  Triangle_test.cpp
